--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Virgile Rennard"
 title_separator          : "-"
 name                     : &name "Virgile Rennard"
 description              : &description "PhD student at Ecole Polytechnique and LINAGORA"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://vrennard.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "VRennard/VRennard.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -24,11 +24,11 @@ author:
   avatar           : "profile.png"
   name             : "Virgile Rennard"
   pronouns         : # example: "she/her"  
-  bio              : "CIFRE PhD Student at Ecole Polytechnique"
+  bio              : "CIFRE PhD Student at Ecole Polytechnique and LINAGORA"
   location         : "Palaiseau, France"
   employer         : "LINAGORA"
   uri              : # URL
-  email            : "Virgile[AT]Rennard.org" 
+  email            : "Virgile@Rennard.org" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
