--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,18 +1,11 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
+  name        : "Virgile Rennard"
   uri         : "http://name.com"
-  email       : "name@name.com"
+  email       : "virgile@rennard.org"
   bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
+  avatar      : "profile.png"
   twitter     : "name"
   google_plus : "Name"
 
-Name2 Name2:
-  name        : "Name2 Name2"
-  email       : "name2@name2.com"
-  bio         : "I ordered what?"
-  avatar      : "bio-photo.jpg"
-  twitter     : "name2"
-  google_plus : "Name"
