--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "fr-FR"
 title                    : "Virgile Rennard"
 title_separator          : "-"
 name                     : &name "Virgile Rennard"
-description              : &description "PhD student at Ecole Polytechnique and LINAGORA"
+description              : &description "Postdoctoral Associate at MIT GOV/LAB"
 url                      : https://vrennard.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "VRennard/VRennard.github.io"
@@ -24,9 +24,9 @@ author:
   avatar           : "profile.png"
   name             : "Virgile Rennard"
   pronouns         : # example: "she/her"  
-  bio              : "CIFRE PhD Student at Ecole Polytechnique and LINAGORA"
-  location         : "Palaiseau, France"
-  employer         : "LINAGORA"
+  bio              : "Postdoctoral Associate at MIT GOV/LAB"
+  location         : "Cambridge, MA"
+  employer         : "MIT GOV/LAB"
   uri              : # URL
   email            : "Virgile@Rennard.org" 
 
